<resources>
    <string name="app_name">Echo Reading</string>
    <string name="welcome_user">Welcome back\ </string>

    <!-- Login activity strings -->
    <string name="login_welcome">Hi, there! Login to continue</string>
    <string name="email_field_hint">Email</string>
    <string name="password_field_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="register_new_user">Register</string>
    <string name="guest_login">Guest</string>

    <!-- Register activity strings -->
    <string name="register_welcome">Welcome to Echo Reading</string>
    <string name="create_profile">Create a new profile</string>
    <string name="name_field_hint">Full name</string>
    <string name="email_hint">E-mail address</string>
    <string name="username_hint">Username</string>
    <string name="confirm_password_field">Confirm password</string>
    <string name="register_button">Register</string>
    <string name="login__reg__button">Have an account? Login</string>
    <string name="user_created">Novo perfil criado com sucesso</string>

    <!-- Error messages -->
    <string name="empty_field">This field cannot be empty</string>
    <string name="short_password">Password too short</string>
    <string name="no_number">Passwords must have at least one number</string>
    <string name="not_match_password">Password doesn\'t match</string>
    <string name="too_long_username">Username too long</string>
    <string name="no_white_space">White space no allowed</string>
    <string name="invalid_email">Invalid e-mail address</string>
    <string name="weak_password">Password too weak</string>
    <string name="database_error">Error trying to register</string>
    <string name="network_error">Network error! Connect to the internet or try again later </string>
    <string name="email_already_in_use">This email is already in use by another account</string>
    <string name="email_in_use">Email already registered</string>
    <string name="wrong_password">Wrong password</string>
    <string name="no_email_found">This is email is not registered</string>

    <!-- Home activity strings -->
    <string name="speak_input_text">Type here</string>
    <string name="speak_button_desc">Read aloud</string>

    <!-- Menu strings -->
    <string name="settings">Settings</string>
    <string name="profile">My profile</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_success">Your account was deleted</string>

    <!-- Action strings -->
    <string name="settings_label">Settings</string>
    <string name="profile_label">Me</string>
    <string name="user_profile_picture">Profile picture</string>
    <string name="update_button">Update</string>
    <string name="changes_applied_successfully">User updated successfully</string>
    <string name="changes_failed">Error trying to update the profile</string>
    <string name="null_user_disclaimer">As you haven\'t logged in, you need to login to see you profile data</string>
    <string name="get_data_error">Connect to the internet to see and edit your data</string>
    <string name="no_user_found">There is no user associated to this email</string>
</resources>