<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/login_welcome"
        android:textColor="@color/text_color"
        android:fontFamily="@font/ubuntu_medium"
        android:textSize="36sp"
        android:layout_alignStart="@+id/login_frame"/>

    <ScrollView
        android:id="@+id/login_frame"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_field_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:hint="@string/email_field_hint"
                android:padding="8dp"
                android:autofillHints="emailAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_field_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autofillHints="password"
                android:hint="@string/password_field_hint"
                android:padding="8dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/login_button"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:onClick="signIn"
                android:textColorHint="@color/text_color"/>

            <LinearLayout
                android:id="@+id/loginWithGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/google_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_with_google"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:textColorHint="@color/text_color"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <Button
                    android:id="@+id/register_new_user"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:hint="@string/register_new_user"
                    android:background="#00000000"
                    android:textColorHint="@color/text_color"
                    android:layout_marginHorizontal="8dp"
                    android:onClick="goToRegisterActivity"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/guest_login"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:hint="@string/guest_login"
                    android:background="#00000000"
                    android:textColorHint="@color/text_color"
                    android:layout_marginHorizontal="8dp"
                    android:onClick="loginAsGuest"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/progress_circular"
        layout="@layout/progress_circular"
        android:visibility="gone"/>

</RelativeLayout>