<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Top app bar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/user_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@color/colorPrimary"/>

        <!-- Top card view -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimaryDark"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/pp_card_view"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:cardCornerRadius="50dp"
                android:visibility="invisible">
                <ImageView
                    android:id="@+id/pp_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile_picture"
                    android:contentDescription="@string/user_profile_picture"/>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/full_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/text_color"
                android:includeFontPadding="false"
                android:layout_toEndOf="@+id/pp_card_view"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/username_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/text_color"
                android:includeFontPadding="false"
                android:layout_toEndOf="@+id/pp_card_view"
                android:layout_below="@+id/full_name_view"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"/>

        </RelativeLayout>

        <!-- Edit personal information -->
        <ScrollView
            android:id="@+id/edit_info_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:orientation="vertical">

                <!-- Profile name field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/full_name_edit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_field_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/full_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="4dp"
                        android:inputType="textPersonName"/>

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Username field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_edit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/username_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_username"
                        android:drawablePadding="4dp"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Email address field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_edit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="4dp"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Update data button -->
                <Button
                    android:id="@+id/updateData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/update_button"
                    android:textColor="@color/text_color"
                    android:onClick="updateUserData"/>

                <!-- delete account button -->
                <Button
                    android:id="@+id/delete_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="-2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/delete_account"
                    android:textSize="18sp"
                    android:textColor="@color/design_default_color_error"
                    style="?android:attr/buttonBarButtonStyle"
                    android:onClick="deleteAccount" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <include
        android:id="@+id/progress_circular"
        layout="@layout/progress_circular"
        android:visibility="gone"/>

</RelativeLayout>